# deskctrl

./: Cargo.toml  README.md
src/: daemon.rs  data.rs  ipc.rs  main.rs  notification.rs  ringbuf.rs  type_map.rs  watcher.rs
