[package]
name = "deskctrl"
version = "0.1.0"
authors = ["Factorial <27factorial@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bincode = "1.3.3"
clap = { version = "4.3.19", features = ["derive"] }
daemonize = "0.5.0"
gdk-pixbuf = "0.18.0"
glib = "0.18.1"
hyphenation = "0.8.4"
hyprland = "0.3.9"
nix = "0.26.2"
ring = "0.16.20"
serde = { version = "1.0", features = ["serde_derive", "rc"] }
serde_json = "1.0.103"
sysinfo = { path = "../sysinfo" }
textwrap = { version = "0.16.0", features = ["hyphenation"] }
tokio = { version = "1.29.1", features = ["full"] }
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
zvariant = "3.15.0"
